fix(lenken-V2): fix auth page styling (#246)
* fix(lenken-V2): fix auth page styling

  Currently when a user reduces the size of the browser, the elements
  on the page overlap and become unreadable.

  This commit fixes this bug. When a user reduces the size of the
  browser, the elements respond accordingly.

  [Fixes #152468350]

* fix(lenken-V2): fix display when user logs out

  Currently when a user logs out, they are redirected to the login
  page. Since the route is `/logout` the nav-bar and header are
  displayed.

  This commit fixes this problem. When a user logs out, they are
  redirected to the login page, the nav-bar and header are
  not displayed.

  [Fixes #152468350]

--- a/src/app/modules/shared/login/login.component.scss
+++ b/src/app/modules/shared/login/login.component.scss
@@ -16,7 +16,6 @@
     position: absolute;
     margin: 0 auto;
     transform: translate(-50%, -50%);
-    top: 23%;
     left: 50%;
   
     .text {
@@ -26,7 +25,7 @@
       font-size: 32px;
       font-weight: 500;
       color: $white;
-      float: left;
+      float: right;
       margin-top: 10px;
     }
   
@@ -44,13 +43,13 @@
     left: 50%;
   
     .tagline {
-      width: 462px;
       font-family: $font-family-2;
       font-size: 48px;
       font-weight: 300;
       text-align: center;
       color: $white;
       line-height: 60px;
+      margin-top: 100px;
     }
   }
   
@@ -68,9 +67,8 @@
   }
 
   #flash-message {
-    top: 60%;
-    position: absolute;
     width: 100%;
+    margin-top: 30px;
     p {
       text-align: center;
       span {
